# openshift-day2-configurator

./: .pre-commit-config.yaml  README.md  day2_configuration.example.yaml  pyproject.toml  pytest.ini  renovate.json  tox.ini
.github/: in-solidarity.yml
docs/: developer-guide.MD
openshift_day2_configuration/: cli.py  config_cluster.py
openshift_day2_configuration/configuration/: configurations.py
openshift_day2_configuration/configurators/: ldap.py  mappings.py
openshift_day2_configuration/tests/: conftest.py  test_configurators.py  test_day2_config_checks.py  test_execute_configurators.py  test_general.py  test_kubeconfig_checks.py  test_verify_and_execute_configurator.py
openshift_day2_configuration/utils/: general.py
openshift_day2_configurator/: cli.py
openshift_day2_configurator/configuration/: configurations.py
openshift_day2_configurator/configurators/: executor.py  ingress.py  ldap.py  mappings.py  nodes.py
openshift_day2_configurator/constants/: ingress.py
openshift_day2_configurator/tests/: conftest.py  test_day2_config_checks.py  test_execute_configurators.py  test_general.py  test_resources.py  test_verify_and_execute_configurator.py
openshift_day2_configurator/utils/: general.py  resources.py
